[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Transition/TransitionIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Cutscenes/Intro/Intro.gd" type="Script" id=2]
[ext_resource path="res://scenes/Transition/TransitionOut.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/sprites/cutscenes/intro/intro-jail-door.png" type="Texture" id=4]
[ext_resource path="res://resources/sounds/intro.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/Cutscenes/Intro/ColorMessage/ColorMessage.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/sounds/intro-window-opens.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/Dialog/Dialog.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "animate"
length = 2.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.3, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.9, 2.2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_play_step"
}, {
"args": [  ],
"method": "_play_step"
}, {
"args": [  ],
"method": "_play_step"
} ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 240.0 ]
}

[node name="TransitionIn" parent="." instance=ExtResource( 1 )]

[node name="TransitionOut" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 240, 80 )
texture = ExtResource( 4 )
hframes = 5

[node name="ColorMessage" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 160 )
message_key = "INTRO_MESSAGE_01"
speed = 0.001

[node name="ColorMessage2" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 160 )
message_key = "INTRO_MESSAGE_02"
speed = 0.001

[node name="ColorMessage3" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 160 )
message_key = "INTRO_MESSAGE_03"
speed = 0.001

[node name="ColorMessage4" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 160 )
message_key = "INTRO_MESSAGE_04"
speed = 0.001

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ActTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/animate = SubResource( 2 )

[node name="MusicTween" type="Tween" parent="."]

[node name="Dialog" parent="." instance=ExtResource( 8 )]

[connection signal="transition_out_finished" from="TransitionOut" to="." method="_on_TransitionOut_transition_out_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ActTimer" to="." method="_on_ActTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_completed" from="MusicTween" to="." method="_on_MusicTween_tween_completed"]
